tests/base/valid/Resolution_Valid_1.whiley
int f(int b):
    return b + 1

void System::main([string] args):
    b = f(10)
    out.println(str(b))
